AM_YFLAGS = -d

noinst_LTLIBRARIES = librrrcmime.la
librrrcmime_la_CFLAGS = ${AM_CFLAGS}
librrrcmime_la_LDFLAGS = 
librrrcmime_la_SOURCES =	cmime_address.c cmime_base64.c cmime_flbi.c cmime_flbi.h \
							cmime_header.c cmime_internal.c cmime_list.c cmime_message.c \
							cmime_part.c cmime_qp.c cmime_string.c cmime_util.c \
							cmime_parser.y cmime_scanner.l
